--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>javascript-development-setup</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <div id="root" style="height: 100%"></div>
   </body>
 </html>
